--- a/Project.toml
+++ b/Project.toml
@@ -5,3 +5,4 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 Kezdi = "48308a23-c29e-446c-b4c0-d9446a767439"
 Parquet2 = "98572fba-bba0-415d-956f-fa77e587d26d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
