--- a/Project.toml
+++ b/Project.toml
@@ -2,6 +2,7 @@
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Graphs = "86223c79-3864-5bf0-83f7-82e725a168b6"
 Kezdi = "48308a23-c29e-446c-b4c0-d9446a767439"
 Parquet2 = "98572fba-bba0-415d-956f-fa77e587d26d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
